# fontomas

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  mk
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.travis/: runall.sh
sources/inc/fontomas/: debug.h  di.h  macros.h  types.h
sources/inc/fontomas/fallback/: consts.h  graph.h
sources/inc/fontomas/services/: logger.h
sources/src/fallback/: graph.cpp
sources/src/platform/macos/: debug.cpp
sources/tst/: main.cpp  test_di.cpp  test_fallback_graph.cpp  testers.h  testsglobals.cpp  testsglobals.h
sources/tst/platform/linux/: linux.cpp
sources/tst/platform/macos/: macos.cpp
tools/bash/: autogen-linux-build.sh  autogen-linux-gen.sh  autogen-linux-mk.sh  autogen-linux-test.sh  autogen-osx-build.sh  autogen-osx-gen.sh  autogen-osx-mk.sh  autogen-osx-test.sh  autogen-utils-linux.sh  autogen-utils-osx.sh  autogen-utils.sh
tools/cmake/: AutoGen.cmake  AutoGenPlatform.cmake  AutoGenProps.cmake  AutoGenTesting.cmake  AutoGenUtils.cmake  Utils.cmake
tools/cmake/platform/: AutoGenIos.cmake  AutoGenLinux.cmake  AutoGenOsx.cmake
tools/docs/: autogen-linux-build.sh.txt  autogen-linux-gen.sh.txt  autogen-linux-mk.sh.txt  autogen-linux-test.sh.txt  autogen-osx-build.sh.txt  autogen-osx-gen.sh.txt  autogen-osx-mk.sh.txt  autogen-osx-test.sh.txt
tools/templates/cpp/nparent/: exports.h.shared.in  exports.h.static.in  version.cpp.in  version.h.in
tools/templates/cpp/wparent/: exports.h.shared.in  exports.h.static.in  version.cpp.in  version.h.in
